Bug 393 - fix spacing and wrapping of popup icons

--- a/basic-reader/trunk/skin/alpheios.css
+++ b/basic-reader/trunk/skin/alpheios.css
@@ -296,13 +296,18 @@ div.alph-morph {
 }
 
 #alph-window #alph-word-tools {
-    margin: 2px 0 0 2px;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-left: 2px;
+    margin-bottom: 10px;
     position: relative; 
+    clear: both;    
     padding: 0;    
+    height: 32px;
 }
 
 #alph-window #alph-word-tools.smallicons {
-    margin: 0;
+    margin-left: 0px;
     position: relative; 
     padding: 0;
     background-color: #ebe9d7;
@@ -316,12 +321,14 @@ div.alph-morph {
     float: left;
     font-size: 10px;
     width: 40px;
-    height: 32px;
+    height: 32px;    
+    margin-top: 2px;
 }
 .smallicons .alph-tool-icon {
     width: 18px;
     height: 18px;
     border: 1px solid transparent;
+    margin-top: 0px;
 }
 .smallicons .alpheios-icon-label {
     display: none;
